Tests/Conformance/Generated/Builtin/Constant/Unit/Unit_fail_2.lean
-- Auto-generated by gen_conformance_tests.py — do not edit manually.
import Tests.Conformance.ConformanceUtils
import PlutusCore.UPLC.ScriptEncoding.Basic

namespace Tests.Conformance.Generated.Builtin.Constant.Unit.Unit_fail_2

open Tests.Conformance

/-- error: Parsing error -/
#guard_msgs in
#conformance_import_uplc builtin_constant_unit_unit_fail_2 "../.plutus-conformance/plutus-conformance/test-cases/uplc/evaluation/builtin/constant/unit/unit-fail-2/unit-fail-2.uplc"

end Tests.Conformance.Generated.Builtin.Constant.Unit.Unit_fail_2
